# VSHControl

./: CMakeLists.txt  Makefile  README.md  exports.exp  imports.S  main.c
include/: custom_update.h  isoreader.h  main.h  virtual_mp4.h  virtual_pbp.h
src/: custom_update.c  dirent_track.c  hibernation.c  isoreader.c  registry.c  usbdevice.c  virtual_mp4.c  virtual_pbp.c  vshmenu.c  vshpatch.c  xmbiso.c
